[gd_scene load_steps=9 format=3 uid="uid://cxrfobklqikl3"]

[ext_resource type="Script" path="res://player.gd" id="1_h0wmk"]
[ext_resource type="PackedScene" uid="uid://pbmyh1qru7p" path="res://characters/happy_boo/happy_boo.tscn" id="1_sl3bn"]
[ext_resource type="PackedScene" uid="uid://bxveu2vskk4a6" path="res://gun.tscn" id="3_4xq2r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_m3lbg"]
radius = 30.0167

[sub_resource type="CircleShape2D" id="CircleShape2D_o83q5"]
radius = 36.1386

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cu0ak"]
bg_color = Color(0.247059, 0.219608, 0.172549, 0.521569)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_86m24"]
bg_color = Color(0.6, 0.898039, 0.247059, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xes6n"]
bg_color = Color(0.282353, 0.282353, 0.282353, 0.454902)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Player" type="CharacterBody2D"]
platform_floor_layers = 4294967040
script = ExtResource("1_h0wmk")

[node name="Camera2D" type="Camera2D" parent="."]
process_callback = 0

[node name="HappyBoo" parent="." instance=ExtResource("1_sl3bn")]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_m3lbg")

[node name="Gun" parent="." instance=ExtResource("3_4xq2r")]
position = Vector2(0, -31)

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
rotation = -1.42635
shape = SubResource("CircleShape2D_o83q5")
debug_color = Color(0.984314, 0, 0, 0.419608)

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -96.0
offset_top = -144.0
offset_right = 97.0
offset_bottom = -117.0
theme_override_styles/background = SubResource("StyleBoxFlat_cu0ak")
theme_override_styles/fill = SubResource("StyleBoxFlat_86m24")
value = 100.0
show_percentage = false

[node name="Panel" type="Panel" parent="."]
offset_left = -560.0
offset_top = -312.0
offset_right = -408.0
offset_bottom = -248.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xes6n")

[node name="MobDeathLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 6.0
offset_top = 5.0
offset_right = 113.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Mobs Killed: 0"

[node name="MobSpawnedLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 7.0
offset_top = 33.0
offset_right = 134.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Mob Spawned: 0"
